style: 변수명 메서드 명 수정 및 공백 컨벤션 통일